Write js code and link to html

--- a/game.html
+++ b/game.html
@@ -7,12 +7,7 @@
     <title>Game Page</title>
     <link rel="stylesheet" href="styles.css">
 
-    <script>
-        
-      console.log("Game page loaded");
-      function gameComputerChoice(max){
-        return Math.floor(Math.random() * max);
-      }
-      console.log(gameComputerChoice(3));
-    </script>
+    <script src="script.js" defer></script>
+</head>
+<body> </body>
 </html>
