--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
 
     <script src="script.js" defer></script>
 </head>
-<body> </body>
+<body> 
+   <h1>Rock Paper Scissors Game</h1>
+   <div>
+   <button id="rock">Rock</button>
+   <button id="paper">Paper</button>
+   <button id="scissors">Scissors</button>
+  </div>
+  <div id="result" style="margin-top:20px;font-size:18px;"></div>
+  <div id="score" style="margin-top:10px;font-size:18px;"></div>
+</body>
 </html>
